--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,33 @@
 img {
     max-height: 600px;
-    border: 3px solid #f00
+    border: 3px solid #f00;
+    display: block;
+    margin-bottom: 300px;
 }
 
 #truskawka1 {
     transform: rotate(-20deg);
+}
+
+#truskawka2 {
+    transform: translate(200px, 200px) rotate(20deg) scale(.5);
+}
+
+#truskawka3 {
+    transform: scale(2);
+}
+
+#truskawka4 {
+    animation-name: stretch;
+    animation-duration: 3s;
+}
+
+@keyframes stretch {
+    forom {
+        width: 100px;
+    }
+    
+    to {
+        width: 200px;
+    }
 }
