--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+
+
 img {
     max-height: 600px;
     border: 3px solid #f00;
@@ -24,8 +26,10 @@ img {
 
 #truskawka5 {
     animation-name: second-stretch;
-    animation-duration: 3s;
+    animation-duration: 10s;
     width: 100%;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease;
 }
 
 @keyframes stretch {
@@ -39,7 +43,7 @@ img {
 }
 
 @keyframes second-stretch {
-    0% {
+    0% { /* moża też dodać tutaj 100% po przecinku i usunąć to 100% z dołu i będzie zchowywać tak samo */
         width: 50%;
     }
     
@@ -50,4 +54,50 @@ img {
     100% {
         width: 50%;
     }
+}
+
+#box-out {
+    position: relative;
+    width: 400px;
+    height: 400px;
+    border: solid 2px #f00;
+}
+
+#box-in {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    bottom: 0;    
+    background-color: #0f0;
+    animation-name: move-box;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    transform: rotate(45deg);
+    
+}
+@keyframes move-box {
+    0%   {top: 0px; right: 0px; transform: rotate(0deg);}
+    25%  {top: 0px; right: 350px; transform: rotate(45deg);}
+    50%  {top: 350px; right: 350px; transform: rotate(90deg);}
+    75%  {top: 350px; right: 0px; transform: rotate(135deg)}
+    100% {top: 0px; right: 0px; transform: rotate(180deg);}
+}
+
+#box-in-2 {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    bottom: 0;    
+    background-color: #00f;
+    animation-name: move-box-2;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    
+}
+@keyframes move-box-2 {
+    0%   {top: 100px; right: 100px; transform: rotate(0deg);}
+    25%  {top: 100px; right: 250px; transform: rotate(-45deg);}
+    50%  {top: 250px; right: 250px; transform: rotate(-90deg);}
+    75%  {top: 250px; right: 100px; transform: rotate(-135deg);}
+    100% {top: 100px; right: 100px; transform: rotate(-180deg);}
 }
